<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bharatmk.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/Name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:layout_margin="5dp"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Toppings"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/Whipped_cream"/>
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/Chocolate"/>
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="QUANTITY"
            android:textSize="16sp"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/decrement_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"/>

        <TextView
            android:id="@+id/Quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/increment_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"/>

        </LinearLayout>
        <TextView
            android:id="@+id/Price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORDER SUMMARY"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary_name"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            android:textColor="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORDER"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>